@@ -1,3 +1,6 @@
+2539.	[security]	Update the interaction between recursion, allow-query,
+			allow-query-cache and allow-recursion.  [RT #19198]
+
 2538.	[bug]		cache/ADB memory could grow over max-cache-size,
 			especially with threads and smaller max-cache-size
 			values. [RT #19240]
